# bpp_plugin.import_dbf

./: Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
src/bpp_plugins/import_dbf/: #admin.py#  Makefile  admin.py  admin_menu.py  apps.py  util.py
src/bpp_plugins/import_dbf/management/commands/: dbf2sql.py  integruj_dbf.py
src/bpp_plugins/import_dbf/sql/: alter-cmkp.sql  alter-schema.sql  alter-umw.sql  remove-imported.sql  translate-autor.sql  translate-bib-desc.sql  translate-poz.sql  translate-title.sql  translate-usi.sql  translate-zrodlo.sql  ustaw-date-aktualizacji.sql
src/bpp_plugins/import_dbf/tests/: test.dbf.sql  test_codecs.py  test_util.py
